--- a/apple.css
+++ b/apple.css
@@ -1,7 +1,7 @@
 body {
     overflow-x: hidden;
     overflow-y: auto;
-    background-image: linear-gradient(to right, #466537, rgb(153, 102, 102), rgb(99, 99, 6));
+    background-image: url(images/your_verse_hero.jpg);
     background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
@@ -9,8 +9,7 @@ body {
 }
 
 header {
-    background: #466368;
-    background: radial-gradient(#a6c5e9 90%, rgb(117, 170, 201));
+    background-image: linear-gradient(to top, rgb(153,152,152) 0%, #4b4949 51%, rgb(167,164,164) 100%);
     border-radius: 6px;
     height: 90px;
     width: 97vw;
