--- a/apple.css
+++ b/apple.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    background-image: linear-gradient(to top, rgb(153,152,152) 0%, #4b4949 51%, rgb(167,164,164) 100%);
+    background-image: linear-gradient(to right, rgb(242, 246, 247) 30%, rgb(213, 214, 216) 80%);
     border-radius: 6px;
     height: 90px;
     width: 97vw;
@@ -113,7 +113,7 @@ input {
 }
 
 button {
-    background-color: gray;
+    background-image: linear-gradient(to top, rgb(153,152,152) 0%, #4b4949 51%, rgb(167,164,164) 100%);
     width: 110px;
     height: 30px;
     cursor: pointer;
